site/css/wea.css
/* ... */
.JS th.sortable{
    cursor:pointer;
}

.JS th.sortable::after{
    left: 3px;
    content:"";
    display: inline-block;
    width: 0;
    height: 0;
    border: solid 5px transparent;
    margin: 4px 4px 0 3px;
    background: transparent;
    border-bottom: solid 7px #2A5DB0;
    border-top-width: 0;
}

.JS th.sortable.down::after{
    border-bottom:none;
    border-top:solid 7px #2A5DB0
}

.JS th.sortable.selected::after,
.JS th.up.selected::after{
    border-bottom: solid 7px var(--wea-pink);
}

.JS th.sortable.down.selected::after{
    border-bottom:none;
    border-top:solid 7px var(--wea-pink);
}


/************************* EXHIBIT TABLES */

table[data-type='exhibit'] tr{
    height: 6rem;
    border-top:1px solid rgba(68, 66, 66, 0.7);
}

table[data-type='exhibit'] tr:not(:last-child){
        border-bottom:1px solid rgba(68, 66, 66, 0.7);
}

table[data-type='exhibit'] > thead > tr{
    border:none;
}

table[data-type='exhibit'] td{
    text-align:center;
   
}
tr:nth-of-type(2n){
    background:var(--wea-grey);
}

tr figure{
    margin:0;
    padding:1rem;
}
tr img{
    max-height:4rem;
}


table[data-type='exhibit']{
    width:100%;
}



@media only screen and (max-width: 900px){
    
    #mainBody{
        padding-left:5%;
        padding-right:5%;
    }
    
    
    #mainBody[class*="docPrimarySource"] > #info{
        grid-template-areas:
        "facsimile"
        "metadata_container"
        "additional_info";
         grid-template-columns:1fr;
         grid-template-rows: max-content max-content max-content;
         grid-column-gap:0;
        
    }
    
    #metadata_container, #facsimile, #additional_info{
        width:auto;
    }
    
    #additional_info{
        padding-left:.25rem;
        margin-left:-.25rem;
    }
    
    #metadata{
    /* No more flex */
        display:block;
        height:100%;
        flex-flow:unset;
        max-height:unset;
        
    }
    #metadata > div{
        padding:.25rem .25rem .25rem 0;
        max-width:unset;
        
    }
    #facsimile{
     margin: 0 auto;   
    }
    
    
    #nav_small{
        display:grid;
        grid-template-columns: 1fr 1fr 1fr;
        width:100vw;
    }
    
    #nav_small > div{
        margin:auto;
    }
    
    #hamburger{
        display:block;
        font-size:200%;
    }
    
    
    .JS header,
    .JS header.open{
        max-height:100vh;
    }
    
    

    
    #nav_small{
        padding:0;
    }
    
    .JS header.open > #nav_small{
        margin-top:.65rem;
    }
    
  
    #nav_small > div {
        margin-top: auto;
        margin-bottom: auto;
    }
    
    #hamburger{
        cursor:pointer;
        display:inline-block;
        margin-left:.5rem;
        
    }
 header.searchOpen #headerSearch{
    grid-template-areas:
    "headerSearchForm headerAdvancedSearchBtn"
    "headerSearchResults headerSearchResults";
    grid-template-columns:3fr 1fr;
    grid-gap:.1rem;
}


 
#headerSearch #headerSearchInputButton{
     display:none;
 }
 
 
/* NAV MAIN SIDE BAR */ 
    #nav_main.closed,
    #nav_main{
       display:none;
       
    }
    
    
    #nav_main > .home,
    #nav_main > .search_icon{
        display:none;   
    }

  
    
    
    

    #nav_main.open,
    #mainBody:not(.JS) #nav_main:target
    {
    /* overflow: hidden; */
    overflow-y: scroll;
    display: block;
    /* width: 40%; */
    min-height: 100vh;
    padding: 1rem 1rem 0 0;
    position: absolute;
    border-right: 1px solid #dedede;
    background-color: #ffffff;
    color: #757575;
    font-size: 90%;
    margin-bottom:2rem;
    margin-top: calc(-1 * var(--header-height));
    background: var(--wea-header-bg-color);
    }
    
 
   #nav_main  a{
       color: #000000;
   }
   
   #nav_main a:hover{
       color:var(--wea-pink);
   }
   
   
   
   #nav_main > div:not(.closer){
       border-bottom: 1px solid #757575;
       padding-top:.75rem;
       padding-bottom:.75rem;
       margin:.5rem;
   }
    
    
   #nav_main > div > div{
        padding: .25rem;
    }  
     
     
    #nav_main > div:nth-last-child(2){
        padding-bottom:2rem;
        border-bottom:none;
    }
    
    
    #nav_main .closer{
    display:block;
    float:right;
    margin-top: -1rem;
}
    
    #nav_main.open > div > div,
    #nav_main:target > div > div{
    display:block;
    }
    
 

   

 
    
    /* Smaller margin needed. */
    .pbNum{
        margin-right:-6.5%;
    }
    
  
    #headerSearchInput{
        width:100%;
    }
 
    

    
    #hamburger{
        font-size: 2.5rem;
    }
    
}

